# Word_cards_web_app

./: .env  .env.example  .gitignore  README.md  composer.json  main.js  manage.py  package-lock.json  package.json  pyproject.toml
app/Http/Controllers/: CardController.php  ExampleController.php  HomeController.php  WebController.php  WordController.php
app/Models/: Card.php  Example.php  User.php  Word.php
config/: database.php  mail.php  settings.py
database/: database.sqlite
database/factories/: WordFactory.php
database/migrations/: 2022_12_24_143227_create_cards_table.php  2022_12_24_143239_create_words_table.php  2022_12_24_143320_create_examples_table.php  2022_12_29_064806_create_cards_table.php  2022_12_29_064820_create_words_table.php  2022_12_29_064832_create_examples_table.php  2022_12_29_192021_remove_unique_cards_name.php  2022_12_31_070407_add_finish_item_to_words_cards_table.php
database/seeders/: WordSeeder.php
docker/: .env.example  Makefile  README.md  docker-compose.yml
docker/nginx/: default.conf
docker/php/: php.ini
resources/views/: index.html  layout.blade.php  sidebar.blade.php
resources/views/cards/: add.blade.php  edit.blade.php  index.blade.php
resources/views/layouts/: app.blade.php
resources/views/web/: index.blade.php  layout.blade.php
resources/views/web/_embed/: header.blade.php  sidebar.blade.php
resources/views/web/cards/: add.blade.php  edit.blade.php  (+1 more)
resources/views/words/: edit.blade.php  index.blade.php  show.blade.php
routes/: api.php  web.php
word_cards_ru/: asgi.py  settings.py  urls.py  wsgi.py
(+11 files in other folders)
