[tool.poetry]
name = "word-cards-ru"
version = "0.1.0"
description = ""
authors = ["Saydum Khalibekov <saydum.it5@gmail.com>"]
readme = "README.md"
packages = [{include = "word_cards_ru"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
