[tool.poetry]
name = "wc-drf"
version = "0.1.0"
description = ""
authors = ["Saydum Khalibekov <saydum.it5@gmail.com>"]
readme = "README.md"
packages = [{include = "wc_drf"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
